Done Filter Product-Layout Load-Still doing Load Adapter and FilterButton

--- a/BaiTap/app/src/main/AndroidManifest.xml
+++ b/BaiTap/app/src/main/AndroidManifest.xml
@@ -9,8 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BaiTap">
-        <activity android:name=".AddProductActivity"></activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.AddProductActivity"></activity>
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
