--- a/BaiTap/app/src/main/AndroidManifest.xml
+++ b/BaiTap/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BaiTap">
+        android:theme="@style/Theme.BaiTap"
+        android:usesCleartextTraffic="true">
         <activity android:name=".activity.CartActivity"></activity>
         <activity android:name=".activity.AddProductActivity"></activity>
         <activity android:name=".activity.MainActivity">
