--- a/BaiTap/app/src/main/AndroidManifest.xml
+++ b/BaiTap/app/src/main/AndroidManifest.xml
@@ -10,12 +10,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.BaiTap">
-<<<<<<< HEAD
-        <activity android:name=".activity.CartActivity"></activity>
-        =======
-        <activity android:name=".activity.AddProductActivity"></activity>
+        <activity android:name=".activity.CartActivity">
+        </activity>
         <activity android:name=".activity.MainActivity">
->>>>>>> main
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
