--- a/BaiTap/app/src/main/AndroidManifest.xml
+++ b/BaiTap/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         android:usesCleartextTraffic="true">
         <activity android:name=".activity.AllCategories"></activity>
         <activity android:name=".activity.CartActivity" />
+        <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
