--- a/BaiTap/app/src/main/AndroidManifest.xml
+++ b/BaiTap/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         <activity android:name=".activity.AllCategories"></activity>
         <activity android:name=".activity.CartActivity" />
         <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.SignupActivity" />
         <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
