--- a/BaiTap/app/build.gradle
+++ b/BaiTap/app/build.gradle
@@ -29,6 +29,7 @@ android {
 }
 
 dependencies {
+    implementation 'com.aurelhubert:ahbottomnavigation:2.3.4'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation 'com.google.android.material:material:1.3.0'
