--- a/BaiTap/app/build.gradle
+++ b/BaiTap/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     implementation'com.squareup.retrofit2:converter-gson:2.4.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
+    implementation 'com.android.support:design:28.0.0'
 }
