--- a/BaiTap/build.gradle
+++ b/BaiTap/build.gradle
@@ -16,6 +16,9 @@ allprojects {
         google()
         jcenter()
     }
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
 }
 
 task clean(type: Delete) {
