--- a/BaiTap/app/build.gradle
+++ b/BaiTap/app/build.gradle
@@ -45,4 +45,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.12.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.12.0'
     implementation 'com.github.mohammadatif:CircularImageView:1.0.1'
+    implementation 'me.relex:circleindicator:2.1.6'
 }
