--- a/BaiTap/app/src/main/AndroidManifest.xml
+++ b/BaiTap/app/src/main/AndroidManifest.xml
@@ -14,9 +14,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.BaiTap"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activity.UserProfile"
-            android:windowSoftInputMode="stateHidden"
-            />
+        <activity android:name=".activity.ShowCartActivity"></activity>
+        <activity android:name=".activity.IntroducingActivity" />
+        <activity
+            android:name=".activity.UserProfile"
+            android:windowSoftInputMode="stateHidden" />
         <activity
             android:name=".activity.ProductActivity"
             android:windowSoftInputMode="stateHidden" />
